--- a/规则模板实践指南.md
+++ b/规则模板实践指南.md
@@ -101,6 +101,7 @@
     3. 【强制性步骤】确认机制：
     - 在每个主要步骤完成后，请明确确认你已遵循规则
     - 使用检查清单确保没有遗漏任何步骤
+    - 每个步骤进行前后都要调用MCP Interactive Feedback Rules
 
     4. 你必须先完成一个任务的所有步骤（包括测试和文档更新），然后再开始下一个任务
 
