Update the practice guide to reflect the transition from Claude 3.7 to Claude 4.0 Sonnet in the ACT mode, and enhance the environment setup and project initiation sections.

--- a/规则模板实践指南.md
+++ b/规则模板实践指南.md
@@ -3,7 +3,7 @@
 ## 项目概要
 这个项目是一个规则模板（rules_template）存储库，主要用于定义和管理AI辅助编码和项目开发的规则和工作流程。其主要功能包括：
 
-1. **AI辅助开发指导框架**：提供了一套全面的规则和工作流程，用于指导AI（如Claude 3.7 Sonnet）在Cursor IDE中进行项目开发。
+1. **AI辅助开发指导框架**：提供了一套全面的规则和工作流程，用于指导AI（如Claude 4.0 Sonnet）在Cursor IDE中进行项目开发。
 
 2. **双模式工作流程**：
    - **PLAN模式（架构模式）**：用于理解需求、制定解决方案策略、验证方案。
@@ -36,76 +36,194 @@
 
 ## 各阶段模型选择（参考）
 - PLAN MODE：使用Gemini 2.5 pro模型
-- ACT MODE： 使用Claude-3.7 R 模型
+- ACT MODE： 使用Claude-4.0 Sonnet 模型
 
-## 使用技巧
-### 1. PLAN 阶段
-- 聊天模式：chat/Agent
-- 目标：明确需求，并在一开始就尽可能多地澄清问题。所有需求都应尽可能精确和详细，以便节省后续重做的时间和精力。
-- 实践：
-    - 提出需求
-        ```bash
-        # 提示词
-        我需要开发一个大模型token计量的后端系统，主要功能包括：
-        1. 统计LLM ASR TTS IMAGE 视频的token用量
-        2. 提供grpc接口并将内容存储到SQLite数据库
-        3. 提供按epoch查询token用量接口
 
-        请严格遵循@plan.mdc @memory.mdc 规则，帮我规划这个项目的架构设计和技术选型。
-        请参考@directory-structure.mdc 规则，帮我设计目录结构。
-        ```
-    - 澄清问题
-        ```bash
-        # AI会要求澄清问题，根据问题进行回复，比如：
-        我们现在开始对需求进行澄清并确定一些技术选型：
-        1. Token 定义：LLM使用模型自带的分词表进行计算，ASR使用输入的音频时长（ms），TTS按照输入文本的字符数（英文1个 中文2个），图像使用像素的长*宽*生图数量，我不确定视频怎么计算token，你可以帮我选型下，必要时可以调用工具进行网络搜索
-        2. Epoch 定义：固定的时间窗口,每小时
-        3. 数据来源与格式：业务端产生并上报，格式你定
-        4. 预期负载:  100qps
-        5. 查询需求: 你定
-        6. 认证与授权：不需要，因为是内部进程调用
-        7. 不确定的问题请通过<WEB USE>进行搜索，获取最佳的5种示例
-        ```
-    - 继续澄清，直到所有需求都精确和详细
-    - 用户验证AI制定的最佳计划
+## 从0到1完整实践指南
 
-### 2. ACT 阶段
-- 聊天模式：Agent
-- 目标：完成编码，遵循关注点分离、模块化设计和增量开发等概念。以迭代的方式实施拟议的计划，一次实现一个功能，并对所有用例进行详尽的测试。然后构建下一个功能。通过这种方式，确保系统稳健且持续改进。
-- 实践：
-    ```bash
-    # 提示词
-    请严格按照以下流程实现代码：
+### 环境准备
+在开始实践之前，请确保你已经：
+1. 安装了Cursor IDE
+2. 熟悉基本的项目开发流程
+3. 准备好要实践的项目想法
 
-    1. 【强制性步骤】读取并理解 @memory.mdc 和 @implement.mdc 规则文件
-    - 在开始任何编码前，请确认你已完全理解这些规则
+### 第一步：环境搭建
 
-    2. 【强制性步骤】对于每个任务，必须先执行SYSTEMATIC CODE PROTOCOL：
-    a. 分析阶段：
-        - 明确进行依赖分析
-        - 执行完整的流程分析
-        - 在继续前必须记录这些分析结果
-    
-    b. 计划阶段：
-        - 提供结构化的代码实现方案
-        - 解释每部分的作用和影响
-    
-    c. 实现阶段：
-        - 逐步实现代码
-        - 在每个组件完成后立即更新tasks_plan.md（将对应任务标记为已完成）
-    
-    d. 测试阶段：
-        - 为每个实现的组件创建单元测试
-        - 测试文件必须放在适当的位置
+#### 1.1 选择AI编码平台
+- **推荐平台**：Cursor IDE
+- **推荐模型**：
+  - PLAN模式：Gemini 2.5 Pro（用于架构设计）
+  - ACT模式：Claude-4.0 Sonnet/Claude-4.0 opus（用于代码实现）
 
-    3. 【强制性步骤】确认机制：
-    - 在每个主要步骤完成后，请明确确认你已遵循规则
-    - 使用检查清单确保没有遗漏任何步骤
-    - 每个步骤进行前后都要调用MCP Interactive Feedback Rules
+#### 1.2 创建项目并设置规则模板
+```bash
+# 创建新项目目录
+mkdir my-practice-project
+cd my-practice-project
 
-    4. 你必须先完成一个任务的所有步骤（包括测试和文档更新），然后再开始下一个任务
+# 复制规则模板文件（根据你的平台选择）
+# 对于Cursor：
+cp -r /path/to/rules_template/.cursor .
 
-    5. 在最终提交前，请回顾并确认已遵循所有规则
+# 对于RooCode：
+cp -r /path/to/rules_template/.roo .
 
-    如果你发现自己没有遵循这些步骤，请停止当前操作，回到正确的流程。
-    ```
+# 对于CLINE：
+cp -r /path/to/rules_template/.clinerules .
+
+# 复制docs和task
+cp -r /path/to/rules_template/docs .
+cp -r /path/to/rules_template/tasks .
+```
+
+### 第二步：需求分析（PLAN模式）
+
+#### 2.1 项目：任务管理平台
+
+**核心功能**：
+1. 任务增删改查
+2. 任务状态管理
+3. 任务分类标签
+4. 任务优先级调度
+5. 智能重试
+
+**技术栈**：
+- **FastAPI**: 现代、快速的 Web 框架
+- **SQLAlchemy**: ORM 数据库工具包
+- **MySQL**: 主数据库
+- **Redis**: 缓存和会话存储
+- **Alembic**: 数据库迁移
+- **Uvicorn**: ASGI 服务器
+
+#### 2.2 启动PLAN模式进行需求分析
+
+**使用以下提示词**：
+```Gemini
+我要开发一个任务管理平台API，主要功能包括：
+1. 任务增删改查
+2. 任务状态管理
+3. 任务分类标签
+4. 任务优先级调度
+5. 智能重试
+
+澄清和细化需求(强制要求：需要和用户进行多次交互，直到用户反馈需求完全明确)
+```
+
+```Cursor
+请严格遵循@plan.mdc @memory.mdc规则，帮我设计系统架构，并输出到docs/architecture.md
+- 调用 context7 MCP服务，获取最佳和最新信息
+- 注意在任务完成前根据mcp-feedback-enhanced工具的要求进行工具调用 
+```
+```Cursor
+请严格遵循@plan.mdc @memory.mdc规则，帮我制定技术选型方案，并输出到docs/technical.md
+- 调用 context7 MCP服务，获取最佳和最新信息
+- 注意在任务完成前根据mcp-feedback-enhanced工具的要求进行工具调用 
+```
+```Cursor
+请严格遵循@plan.mdc @memory.mdc规则，帮我更新tasks/tasks_plan.md和tasks/active_context.md
+- 调用 context7 MCP服务，获取最佳和最新信息
+- 注意在任务完成前根据mcp-feedback-enhanced工具的要求进行工具调用 
+```
+
+#### 2.3 完成核心文档
+在PLAN阶段，你需要完成以下文档：
+- `docs/product_requirement_docs.md` - 产品需求文档(Gemini WEB端生成)
+- `docs/architecture.md` - 系统架构设计
+- `docs/technical.md` - 技术规范和选型
+- `tasks/tasks_plan.md` - 任务计划和里程碑
+- `tasks/active_context.md` - 活动上下文
+
+### 第三步：迭代开发（ACT模式）
+
+#### 3.1 切换到ACT模式
+**使用以下提示词**：
+```
+请严格按照以下流程实现代码：
+
+1. 【强制性步骤】读取并理解 @memory.mdc 和 @implement.mdc 规则文件
+   - 在开始任何编码前，请确认你已完全理解这些规则
+
+2. 【强制性步骤】对于每个任务，必须先执行SYSTEMATIC CODE PROTOCOL：
+   a. 分析阶段：
+      - 明确进行依赖分析
+      - 执行完整的流程分析
+      - 在继续前必须记录这些分析结果
+   
+   b. 计划阶段：
+      - 提供结构化的代码实现方案
+      - 解释每部分的作用和影响
+   
+   c. 实现阶段：
+      - 逐步实现代码
+      - 在每个组件完成后立即更新tasks_plan.md（将对应任务标记为已完成）
+   
+   d. 测试阶段：
+      - 为每个实现的组件创建单元测试
+      - 测试文件必须放在适当的位置
+
+3. 【强制性步骤】确认机制：
+   - 在每个主要步骤完成后，请明确确认你已遵循规则
+   - 使用检查清单确保没有遗漏任何步骤
+
+4. 你必须先完成一个任务的所有步骤（包括测试和文档更新），然后再开始下一个任务
+
+现在开始实现第一个功能模块：[具体功能名称]
+
+- 调用 context7 MCP服务，获取最佳和最新信息
+- 注意在任务完成前根据mcp-feedback-enhanced工具的要求进行工具调用
+```
+
+#### 3.2 开发过程中的关键原则
+- **一次一个功能**：完成一个功能模块后再开始下一个
+- **立即测试**：每个功能完成后立即编写和运行测试
+- **文档同步**：及时更新相关文档，特别是tasks_plan.md和active_context.md
+- **增量提交**：每完成一个小功能就提交代码
+
+## AI编程常见偷懒陷阱及应对策略
+
+#### 4.1 脚本类型AI编程的三大偷懒陷阱
+
+在实际使用AI进行编程时，需要特别警惕以下三种常见的偷懒行为：
+
+**1. 测试用例偷懒**
+- **表现**：AI给出无意义的Mock或者大量`assert(true)`的垃圾测试代码
+- **危害**：测试失去实际价值，无法发现真正的bug
+- **应对策略**：
+  - 明确要求AI编写具体的、有意义的测试用例
+  - 要求测试覆盖边界条件和异常情况
+  - 检查测试断言是否验证了实际的业务逻辑
+
+**2. Lint规则随意修改**
+- **表现**：为了让代码"看起来正确"，随意修改或关闭Lint规则
+- **危害**：破坏代码质量标准，掩盖潜在问题
+- **应对策略**：
+  - 坚持现有的Lint规则，除非有充分理由修改
+  - 如需修改规则，必须在团队中讨论并记录原因
+  - 优先修复代码而不是修改规则
+
+**3. 不考虑代码复用**
+- **表现**：相似功能重复实现，忽略现有工具函数和组件
+- **危害**：代码冗余，维护成本高，容易产生不一致
+- **应对策略**：
+  - 在编写新代码前，先搜索现有代码库中的相似实现
+  - 鼓励抽象共同逻辑为工具函数
+  - 建立代码复用检查机制
+
+#### 4.2 防范措施
+
+1. **代码审查检查点**：
+   - 测试用例是否有实际意义
+   - Lint规则是否被不当修改
+   - 是否存在重复代码
+
+2. **提示词优化**：
+   - 明确要求AI考虑代码复用
+   - 要求AI解释测试用例的意义
+   - 禁止随意修改Lint规则
+
+3. **持续改进**：
+   - 记录发现的偷懒行为
+   - 更新规则模板以防范类似问题
+   - 分享经验给团队成员
+
+
