Add MCP recommendations for context7 and mcp-feedback-enhanced tools to the practice guide.

--- a/规则模板实践指南.md
+++ b/规则模板实践指南.md
@@ -227,3 +227,6 @@ cp -r /path/to/rules_template/tasks .
    - 分享经验给团队成员
 
 
+## MCP推荐
+1. context7 MCP服务: https://github.com/upstash/context7
+2. mcp-feedback-enhanced工具: https://github.com/Minidoracat/mcp-feedback-enhanced
