--- a/规则模板实践指南.md
+++ b/规则模板实践指南.md
@@ -1,7 +1,7 @@
-# 规则模板实践指南
+# AI工作流实践指南
 
 ## 项目概要
-这个项目是一个规则模板（rules_template）存储库，主要用于定义和管理AI辅助编码和项目开发的规则和工作流程。其主要功能包括：
+这个项目是一个rules_template存储库，主要用于定义和管理AI辅助编码和项目开发的规则和工作流程。其主要功能包括：
 
 1. **AI辅助开发指导框架**：提供了一套全面的规则和工作流程，用于指导AI（如Claude 4.0 Sonnet）在Cursor IDE中进行项目开发。
 
